[tool.poetry]
name = "pyGreatCircleDistance"
version = "0.1.0"
description = "Calculate the distance between two GPS coordinates in meters"
authors = ["Aleksandr Shpak <shpaker@gmail.com>"]
readme = "README.md"
repository = "https://github.com/shpaker/pyGreatCircleDistance"

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
flake8 = "^5.0.4"
pylint = "^2.15.8"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["pygreatcircledistance.py", "test_pygreatcircledistance.py"]
skip = [".mypy_cache", ".pytest_cache", "venv"]

[tool.pylint.messages_control]
disable = "missing-docstring, no-member, too-few-public-methods, logging-fstring-interpolation, too-many-arguments"

[tool.pylint.format]
max-line-length = "79"
indent-string = "    "
good-names = "fh, id, to"

[tool.pylint.master]
ignore = "venv,tests"
indent-string = "    "
extension-pkg-whitelist = "pydantic"

[tool.black]
line-length = 79
verbose = 1
color = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
  )/
)
'''
